[package]
name = "xandikos"
version = { workspace = true }
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-3.0+"
description = "Lightweight CalDAV/CardDAV server"
repository = "https://github.com/jelmer/xandikos.git"
homepage = "https://github.com/jelmer/xandikos"

[workspace]
members = ["xandikos-rs"]

[workspace.package]
version = "0.2.12"

[dependencies]
clap = ">=4, <4.6"
glob = "0.3.1"
pyo3 = { workspace = true }

[workspace.dependencies.pyo3]
version = "0.23"
features = [ "auto-initialize",]

[dependencies.tokio]
version = "1"
features = [ "full",]
