[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xandikos"
description = "Lightweight CalDAV/CardDAV server"
readme = "README.rst"
authors = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
license = {text = "GNU GPLv3 or later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
]
urls = {Homepage = "https://www.xandikos.org/"}
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "icalendar>=5.0.4",
    "dulwich>=0.19.1",
    "defusedxml",
    "jinja2",
    "multidict",
    "vobject",
]
dynamic = ["version"]

[project.optional-dependencies]
prometheus = ["aiohttp_openmetrics"]
systemd = ["systemd_python"]

[project.scripts]
xandikos = "xandikos.__main__:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
xandikos = [
    "templates/*.html",
    "py.typed",
]

[tool.setuptools.dynamic]
version = {attr = "xandikos.__version__"}

[tool.mypy]
ignore_missing_imports = true

[tool.distutils.bdist_wheel]
universal = 1

[tool.ruff]
select = [
    "ANN",
    "D",
    "E",
    "F"
]
ignore = [
    "ANN101",  # missing-type-self
]

[tool.ruff.pydocstyle]
convention = "google"
