[metadata]
name = xandikos
description = Lightweight CalDAV/CardDAV server
long_description = file:README.rst
version = attr:xandikos.__version__
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
license = GNU GPLv3 or later
url = https://www.xandikos.org/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[options]
install_requires =
    aiohttp
    icalendar>=5.0.4
    dulwich>=0.19.1
    defusedxml
    jinja2
    multidict
    vobject
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    xandikos = xandikos.__main__:main

[options.extras_require]
prometheus = aiohttp_openmetrics
systemd = systemd_python

[options.package_data]
xandikos =
    templates/*.html
    py.typed

[flake8]
ignore = W504,E203,W503
exclude = compat/vdirsyncer/,.tox,compat/ccs-caldavtester,.git,compat/pycaldav,examples/gunicorn.conf.py
application-package-names = xandikos

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = 1
